Fixed issue when search button had wrong margin for admin user.

--- a/sites/all/modules/custom/sport_event/sport_event.css
+++ b/sites/all/modules/custom/sport_event/sport_event.css
@@ -223,7 +223,7 @@ width: 108px!important;
   margin: 1px;
 }
 
-.node-type-event .region-sidebar-second #edit-submit {
+.block-sport-event .form-submit {
   margin: 0px;
 }
 
